# youtube-to-slides-web

./: .env.backend.example  .env.example  .env.frontend.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/scripts/: pr_review.py
.github/workflows/: ci.yml  deploy.yml  pr-review.yml
backend/: Dockerfile  celery_healthcheck.py  celery_worker.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: a3bc64f48a20_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  presentations.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/services/: google_slides.py  link_injector.py  pptx_renderer.py  presenton.py  reference_matcher.py  slide_extractor.py  slide_generator.py  storage.py  transcript.py
backend/app/tasks/: presentation_tasks.py
backend/tests/: conftest.py  test_link_injector.py  test_presentation_tasks.py  test_presenton.py  test_slide_generator.py  test_transcript.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: FolderPickerModal.tsx  PresentationCard.tsx  YoutubeForm.tsx
frontend/src/lib/: api.ts  auth.ts
